--- a/socialmedia/package.json
+++ b/socialmedia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social",
+  "name": "socialmedia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.1",
     "react": "^18",
     "react-dom": "^18"
   },
