--- a/socialmedia/package.json
+++ b/socialmedia/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.6.1",
     "react": "^18",
